# CG-TP1

./: README.md  pyproject.toml
src/: main_og.py
src/tp1/: __init__.py  __main__.py  app.py  config.py  state.py
src/tp1/algorithms/: __init__.py  circles.py  lines.py
src/tp1/algorithms/clipping/: __init__.py  cohen_sutherland.py  liang_barsky.py
src/tp1/events/: __init__.py  dispatcher.py
src/tp1/render/: __init__.py  raster.py  renderer.py
src/tp1/scene/: __init__.py  models.py  ops.py  scene.py
src/tp1/tools/: __init__.py  base.py  circle.py  clip_actions.py  clip_window.py  line.py  rotate.py  scale_uniform.py  select.py  select_transform.py  translate.py
src/tp1/ui/: __init__.py  button.py  overlay.py  sidebar.py
src/tp1/utils/: __init__.py  geom.py  transforms.py
