[project]
name = "tp1-cg"
version = "0.1.0"
description = "Computação Gráfica TP1 — modular pygame app (lines, circles, transforms, clipping)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pygame>=2.5.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP"]
ignore = []
target-version = "py310"

[tool.mypy]
python_version = "3.10"
pretty = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_untyped_defs = true
follow_imports = "silent"